--- a/.github/workflows/invoke-kagent.yml
+++ b/.github/workflows/invoke-kagent.yml
@@ -47,5 +47,5 @@ jobs:
           PR_ID="${{ github.event.pull_request.number }}"
           FILE_PATH="./gitops-manifests.yaml"
           
-          sed -i "1i PR ID: ${PR_ID}" "${FILE_PATH}. Input manifest start here:"
+          sed -i "1i PR ID: ${PR_ID}. Input manifest start here:" "${FILE_PATH}"
           kagent --api-url "https://demo-smart-idp.uk/api" invoke --agent gitops-agent --file  ${FILE_PATH}  | jq -r '.artifacts[0].parts[0].text'
