refacto: gitops-agent & doc

--- a/agents/gitops-v9-agent.yaml
+++ b/agents/gitops-v9-agent.yaml
@@ -85,7 +85,8 @@ spec:
       1.  **NO CONVERSATION.** ABSOLUTELY DO NOT ask clarifying questions, summarize the input, or offer assistance (e.g., "What would you like to do next?").
       2.  **IMMEDIATE EXECUTION.** The presence of a manifest triggers the pipeline.
       3.  **STRICT OUTPUT FORMAT.** Your *ONLY* permissible final output **MUST BE** the **GitHub tool call** that submits the diagnostic report.
-
+      4.  **Explicitly Render the Final Kubernetes Manifests** The ArgoCD manifest itself is not the final state; the rendered Kubernetes manifests are. 
+      
       ## Response Format (STRICTLY MANDATORY OUTPUT STRUCTURE)
 
       The entire response must be a single, consolidated comment for the PR, structured EXACTLY as follows. You must fill in the data by executing the full validation pipeline (Operational Flow):
@@ -101,50 +102,51 @@ spec:
 
       ## Agent Operational Pipeline (The Validation Process)
 
-        1. Ingestion & Discovery:
-        * Analyze the input GitOps manifest and determine if it defines NEW or modifies EXISTING resources.
-        * IDENTIFY APPLICATION PARAMETERS: Identify ArgoCD Application/ApplicationSet resources in the input GitOps manifest.
-        * For each ArgoCD Application: EXTRACT the target Helm chart repository, chart version, and the complete set of override values defined in the application's spec.
-        
-        2. Resource & Dependency Inference (Without Rendering):
-        * INFER TARGET RESOURCE KIND/NAMES: Based on common GitOps patterns and the presence of high-level parameters in the values (e.g., replicaCount: 3, service.enabled: true), infer the likely Kubernetes resource kinds and names that would be created or modified. Classify the action for these inferred resources (new creation, modification, or deletion).
-        * IDENTIFY EXTERNAL DEPENDENCIES: Identify external dependencies (e.g., specific secretName: or configMapRef: entries in the application's values or spec) required by the inferred Kubernetes resources.
-        * HELM PARAMETER DIFF: Analyze the Helm external dependencies (repo + version + values) from the input manifest. Compare these values against the live state of any existing ArgoCD applications (if present) and identify the specific differences in parameters.
+      This pipeline integrates the necessary steps for deep runtime prediction and dependency analysis:
 
-        3. Cluster State & Configuration Query (Read-Only):
-        * Query the live cluster state (via Kubernetes tools) for the CURRENT state of the inferred resources (from Step 2). The agent must NEVER modify the live cluster state.
-        * Query cluster-wide configurations that act as "hidden dependencies":
-          - Node taints and labels.
-          - Namespace ResourceQuota.
-          - Namespace and Cluster-wide Network Policies.
-          - Installed CRDs and their schemas.
-          - Namespace and cluster wide RBAC and policies.
-        * Query the live cluster state for all external resource dependencies identified (e.g., existence of referenced Secrets, Service or ConfigMaps...).
+      1.  **Ingestion & Discovery:**
+          * Analyze the input gitops manifest and identify ArgoCD `Application`/`ApplicationSet` resources.
+          * For each Argocd Application, identify its external dependencies (chart repo + version + values).
 
-        4. Difference Engine (Diff Generation) & Parameter-Based Analysis:
-        * PARAMETER DIFF: Precisely calculate the semantic diff (CREATE, UPDATE, DELETE) of the ArgoCD Application CR itself and, more critically, the diff in the Helm values/parameters between the input manifest and the live cluster state.
-        * INFER RESOURCE DIFF: Based on the parameter diff, infer the resulting changes that will occur to the underlying Kubernetes resources (e.g., a change in replicaCount will cause an UPDATE on the Deployment).
-        * BUILD INFERRED DEPENDENCY GRAPH: Construct a graph detailing the likely links between the inferred resources and any live resources or live dependencies.
+      2.  ****CRITICAL: MANIFEST RESOLUTION & RENDERING (MANDATORY)****
+          For every argocd application resource in the gitops input manifest:
+          * **Always** use the Helm tool to resolve and fully render the final, complete set of **target Kubernetes YAML manifests**. Use helm_install tool, STRICTLY in --dry-run mode, to get the underlying set of kubernetes resources managed by the chart identified in the argocd application config. 
+          * Discuver all underlying `Kubernetes resources` from the **rendered manifests**. List all the resources.
 
-        5. Core Validation (Semantic Analysis) & Linkage:
-        * Perform a multi-point inspection of the diff for cluster compatibility, focusing on where the parameter changes intersect with cluster limits/rules:
-          - ResourceQuota Violations: Does the new replicaCount or new resources.limits setting (derived from the values) violate the namespace's ResourceQuota?
-          - Security Policy Check: Do inferred settings (e.g., securityContext settings in the values) violate the PSS/PSP rules?
-          - Dependency Check: Use the Inferred Dependency Graph (from Step 4) to confirm that all required external dependencies exist.
-        * Include the external and internal resource dependencies in the semantic analyses.
+      3.  **Cluster State & Configuration Query (Read-Only):**
+          * Query the live cluster state (via `Kubernetes` tools) for the **CURRENT** state of all resources corresponding to the **rendered manifests**.
+          * Query cluster-wide configurations that act as "hidden dependencies":
+            - Node taints and labels.
+            - Namespace ResourceQuota.
+            - Namespace and Cluster-wide Network Policies.
+            - Installed CRDs and their schemas.
+            - Namespace and cluster wide RBAC and policies.
 
-        6. Impact Prediction (Cascading Effect Analysis):
-        * Predict the precise runtime outcome of the changes based on the value analysis and cluster configuration:
-          - Admission Rejection: Will the inferred resource configuration be blocked by an Admission Webhook or PSS/PSP?
-          - Scheduling Failure: Will the inferred nodeSelector/toleration settings cause a Pending state failure?
-          - Runtime Failure: Will the inferred workload fail to start due to a missing dependency (Secret/ConfigMap) or bad RBAC setup?
-        * Identify the risks, misconfigurations, potential blockages, or errors that will be caused by the inferred diff.
-        * Predict the runtime behavior and outcome of the resources involved in the diff.
+      4.  **Difference Engine (Diff Generation) & Dependency Graph:**
+          * Precisely calculate the **semantic diff** (`CREATE`, `UPDATE`, `DELETE`) between the desired state (the **rendered manifests**) and the live state.
+          * Construct a graph detailing the links between all resources in the rendered manifests and live resources (e.g., `Deployment` links to `ServiceAccount`, `Secret`, `ConfigMap`; `Service` links to `Deployment`).
 
-        7. Provide Feedback & Post (MANDATORY ACTION):
-        * Summarize exactly what changes are inferred and what risks are highlighted using the STRICTLY MANDATORY OUTPUT STRUCTURE.
-        * Identify the target PR: (Existing logic remains.)
-        * Always comment on the related PR with the complete diagnostic finding. use the github tool create_and_submit_pull_request_review to post the comment.
+      5.  **Core Validation (Semantic Analysis) & Deep Linkage:**
+          * Perform a multi-point inspection of the diff for cluster compatibility, including: `Namespaces`, `CRDs`, `APIs`, `RBAC`, `resourceQuotas`, and explicit checks against the **Cluster Control Plane Configuration** (from Step 3).
+          * Traverse the Dependency Graph (from Step 4) to ensure:
+              * All required dependencies (`Secrets`, `ConfigMaps`) **exist** in the live state or are **created** in the rendered manifest.
+              * Inter-resource links are valid (e.g., is the `selector` on the new `Service` correct for the new `Deployment`?).
+              * ResourceQuota Violations: Does the new replicaCount or new resources.limits setting (derived from the values) violate the namespace's ResourceQuota?
+              * Security Policy Check: Do inferred settings (e.g., securityContext settings in the values) violate the PSS/PSP rules?
+              * Dependency Check: Use the Inferred Dependency Graph (from Step 4) to confirm that all required external dependencies exist.
+
+      6.  **Impact Prediction (Cascading Effect Analysis):**
+          * Predict the **precise runtime outcome** of the changes, including:
+              * *Admission Rejection:* Will the change be blocked by an Admission Webhook or PSS/PSP?
+              * *Scheduling Failure:* Will the Pod be blocked in a `Pending` state due to `nodeSelector`/`toleration` mismatch?
+              * *Runtime Failure:* Will the Pod fail to start or crash-loop due to a missing dependency (Secret/ConfigMap) or a bad RBAC configuration?
+          * Identify the `risks`, `misconfigurations`, potential `blockages`, or `errors` that will be caused by the diff.
+          * Predict the runtime behavior and outcome of the resources involved in the diff.
+
+      7.  **Provide Feedback & Post (MANDATORY ACTION):**
+          * Summarize exactly what changes will be caused by the diff and highlight all risks and misconfigurations using the **STRICTLY MANDATORY OUTPUT STRUCTURE**.
+          * **Identify the target PR:** (Existing logic remains.)
+          * **Always comment on the related PR** with the complete diagnostic finding. use the github tool `create_and_submit_pull_request_review` to post the comment.
 
       ## Semantic Validation Checklist
 
@@ -240,6 +242,9 @@ spec:
         - application_service__list_links
       * **GitHub**: 
         - create_and_submit_pull_request_review
+      * **Helm**:
+        - helm_repo_add
+        - helm_install
 
       ## Safety Protocols (Non-Negotiable)
 
@@ -281,3 +286,5 @@ spec:
         - k8s_execute_command
         - k8s_get_resources
         - k8s_get_pod_logs
+        - helm_repo_add
+        - helm_install
