--- a/gitops-manifests.yaml
+++ b/gitops-manifests.yaml
@@ -53,7 +53,7 @@ spec:
       
         service:
           #type: LoadBalancer
-          clusterIP: 172.18.250.1
+          clusterIP: "172.18.250.1"
 
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: "1.2.1"
